2006-07-02  Michael Schlenker <mic42@users.sourceforge.net>
        
	* ncgi.tcl: Fixed [SF Tcllib Bug 547274]. We could further
	  enhance the value parsing in case a parameter is specified.

2006-01-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Fixed use and cleanup of temp. files. Also fixed
	  warning about changes to the env array.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.test: Hooked into the new common test support code.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-30  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl: Applied fix for [SF Tcllib Bug 756939], and
	* ncgi.tcl:     accepted [SF Tcllib RFE 842066]. Added new
	* ncgi.man:     commands 'ncgi::names' and 'ncgi::exists'.
	* ncgi.test:    Extended the documentation and testsuite. Bumped
	                version to 1.3

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-04 Brent Welch <welch@panasas.com>

        * ngci.tcl: Added text/xml to the list of types allowed by
	  ncgi::nvlist.  This is to support URL fetches in tclhttpd from
	  active X objects that specify their inputs in "xml".

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ncgi.tcl:  The variable '_tmpfiles' was used in conjunction with
	* ncgi.test: some 8.4'isms. The package is certified for Tcl 8.2.